syntax = "proto2";
enum Foo {
  A = 1;
  B = 2;
  C = 0;
}
message TestObject {
  optional Foo field1 = 1;
  required TestObject field2 = 2;
}